2011-10-05  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_analyze_CellExpt.m:  renamed 'filemask' variable to 'filepath'
	* pan_process_CellExpt.m:  cosmetic changes to code.
	* pan_sim_newt_run.m:  set default 'microns to pixel' conversion to 0.171 um/pixel, equivalent to a (current) varioptic setting of 50.
	* pan_analyze_PMExpt.m:  added.  contains analysis protocol for Passive Microrheology Experiment type
	* pan_process_PMExpt.m:  added.  Analyses, reports, and publishes results for the "Passive Microrheology Experiment" specified for Panoptes..	
	* pan_publish_PMExpt.m:  added.  Publishes results for "Passive Microrheology Experiment".

2011-09-21  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_MCU2um.m:  updated to reflect new fitting parameters for new varioptic.

2011-09-09  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_analyze_CellExpt.m:  removed 'window' definition.
	* pan_combine_data.m:  same.
	* pan_load_metadata.m:  cosmetic changes to code/commenting.
	* pan_process_CellExpt.m:  added 'window' definition to metadata structure.

2011-08-26  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_publish_CellExpt.m:  updated documentation.

2011-08-26  Jeremy Cribb <jcribb@email.unc.edu>
	* TODO.txt:  added.  keeping up with bugs and feature requests.  This project isn't patched into redmine.

2011-08-15  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_read_wells_txtfile.m:  fixed a bug where well IDs were not converting correctly from strings to nums.

2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_clean_path.m:  added.  cleans a data path of files created by panoptes analysis code.  useful for testing code on a dataset after making changes.

2011-08-11  Jeremy Cribb <jcribb@email.unc.edu>
	* pan_load_metadata.m: now calculates frame rate from data saved in 'ExperimentConfig' file.
	* pan_analyze_CellExpt.m:  updated to generate evt (filtered) files if necessary.
	* pan_process_CellExpt.m:  same.