@@ -20,9 +20,22 @@ window = unique(floor(logspace(0,round(log10(duration*frame_rate)), window)));
 window = window(:);
 metadata.window = window;
 
+% setting up filter structure
+filt.tcrop      = 3;
+filt.min_frames = 20;
+filt.min_pixels = 0;
+filt.max_pixels = Inf;
+filt.xycrop     = 0;
+filt.xyzunits   = 'pixels';
+filt.dead_spots = [492 128 30 30 ; ...
+                   184 359 30 30 ; ...
+                   499 319 30 30 ; ...
+                   216 149 30 30 ];    % flea2 camera deadspots on 2011/10/07
+filt.drift_method = 'center-of-mass';
 
-dataout  = pan_analyze_PMExpt(filepath);
-dataout  = pan_publish_PMExpt(metadata);
+
+dataout  = pan_analyze_PMExpt(filepath, filt);
+dataout  = pan_publish_PMExpt(metadata, filt);
 
 
 if exityn == 'y'
